# Billboard-Top100-Data-Analysis-in-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
app/: main.cpp
data/output/: tree.json
dependencies/: CMakeLists.txt
docs/: Projeto 1 de ED-II.pptx
src/: fileReaderClass.cpp  fileReaderClass.hpp  nodeClass.cpp  nodeClass.h  nodeClass.hpp  recordStruct.hpp  treeClass.cpp  treeClass.h  treeClass.hpp  utils.cpp  utils.hpp
src/py/: plot_tree.ipynb
